--- a/modules/core/src/main/resources/META-INF/classnames.properties
+++ b/modules/core/src/main/resources/META-INF/classnames.properties
@@ -1774,6 +1774,7 @@ org.apache.ignite.internal.transactions.IgniteTxTimeoutCheckedException
 org.apache.ignite.internal.transactions.IgniteTxUnexpectedStateCheckedException
 org.apache.ignite.internal.transactions.TransactionCheckedException
 org.apache.ignite.internal.util.collection.BitSetIntSet
+org.apache.ignite.internal.util.collection.IntRWHashMap
 org.apache.ignite.internal.util.collection.ImmutableIntSet
 org.apache.ignite.internal.util.collection.IntSet
 org.apache.ignite.internal.util.F0$1
