--- a/modules/cloud/pom.xml
+++ b/modules/cloud/pom.xml
@@ -29,7 +29,7 @@
     </parent>
 
     <artifactId>ignite-cloud</artifactId>
-    <version>2.5.6-SNAPSHOT</version>
+    <version>2.5.8-p2-SNAPSHOT</version>
     <url>http://ignite.apache.org</url>
 
     <properties>
