--- a/modules/codegen/pom.xml
+++ b/modules/codegen/pom.xml
@@ -32,7 +32,7 @@
     </parent>
 
     <artifactId>ignite-codegen</artifactId>
-    <version>2.5.6-SNAPSHOT</version>
+    <version>2.5.8-p2-SNAPSHOT</version>
     <url>http://ignite.apache.org</url>
 
     <dependencies>
