--- a/modules/compatibility/pom.xml
+++ b/modules/compatibility/pom.xml
@@ -33,7 +33,7 @@
     </parent>
 
     <artifactId>ignite-compatibility</artifactId>
-    <version>2.5.6-SNAPSHOT</version>
+    <version>2.5.8-p2-SNAPSHOT</version>
     <url>http://ignite.apache.org</url>
 
     <dependencies>
