--- a/modules/extdata/uri/pom.xml
+++ b/modules/extdata/uri/pom.xml
@@ -32,7 +32,7 @@
     </parent>
 
     <artifactId>ignite-extdata-uri</artifactId>
-    <version>2.5.6-SNAPSHOT</version>
+    <version>2.5.8-p2-SNAPSHOT</version>
 
     <dependencies>
         <dependency>
