--- a/modules/web/ignite-websphere-test/pom.xml
+++ b/modules/web/ignite-websphere-test/pom.xml
@@ -30,7 +30,7 @@
 
     <artifactId>ignite-websphere-test</artifactId>
     <packaging>war</packaging>
-    <version>2.5.6-SNAPSHOT</version>
+    <version>2.5.8-p2-SNAPSHOT</version>
     <url>http://ignite.apache.org</url>
 
     <dependencies>
