--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -138,6 +138,7 @@
         <zookeeper.version>3.4.14</zookeeper.version>
         <zstd.version>1.3.7-2</zstd.version>
         <opencensus.version>0.22.0</opencensus.version>
+        <commons.lang3.version>3.9</commons.lang3.version>
 
 
         <!-- Maven plugins versions -->
